// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Dashboard Grid dashboard, all card sizes 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Resize your window to see the callback handlers get triggered in the Actions tab.
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <div
          className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
          style={
            Object {
              "height": "1776px",
            }
          }
        >
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Small"
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(16px,16px)",
                "OTransform": "translate(16px,16px)",
                "WebkitTransform": "translate(16px,16px)",
                "height": "144px",
                "msTransform": "translate(16px,16px)",
                "position": "absolute",
                "transform": "translate(16px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Small"
              >
                <div
                  className="iot--card--title--text"
                >
                  Small
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Small Wide"
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(332px,16px)",
                "OTransform": "translate(332px,16px)",
                "WebkitTransform": "translate(332px,16px)",
                "height": "144px",
                "msTransform": "translate(332px,16px)",
                "position": "absolute",
                "transform": "translate(332px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Small Wide"
              >
                <div
                  className="iot--card--title--text"
                >
                  Small Wide
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Medium Thin"
            role="presentation"
            style={
              Object {
                "--card-default-height": "304px",
                "MozTransform": "translate(16px,176px)",
                "OTransform": "translate(16px,176px)",
                "WebkitTransform": "translate(16px,176px)",
                "height": "304px",
                "msTransform": "translate(16px,176px)",
                "position": "absolute",
                "transform": "translate(16px,176px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Medium Thin"
              >
                <div
                  className="iot--card--title--text"
                >
                  Medium Thin
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "256px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Medium"
            role="presentation"
            style={
              Object {
                "--card-default-height": "304px",
                "MozTransform": "translate(332px,176px)",
                "OTransform": "translate(332px,176px)",
                "WebkitTransform": "translate(332px,176px)",
                "height": "304px",
                "msTransform": "translate(332px,176px)",
                "position": "absolute",
                "transform": "translate(332px,176px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Medium"
              >
                <div
                  className="iot--card--title--text"
                >
                  Medium
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "256px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Medium Wide"
            role="presentation"
            style={
              Object {
                "--card-default-height": "304px",
                "MozTransform": "translate(648px,16px)",
                "OTransform": "translate(648px,16px)",
                "WebkitTransform": "translate(648px,16px)",
                "height": "304px",
                "msTransform": "translate(648px,16px)",
                "position": "absolute",
                "transform": "translate(648px,16px)",
                "width": "616px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Medium Wide"
              >
                <div
                  className="iot--card--title--text"
                >
                  Medium Wide
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "256px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Large Thin"
            role="presentation"
            style={
              Object {
                "--card-default-height": "624px",
                "MozTransform": "translate(16px,496px)",
                "OTransform": "translate(16px,496px)",
                "WebkitTransform": "translate(16px,496px)",
                "height": "624px",
                "msTransform": "translate(16px,496px)",
                "position": "absolute",
                "transform": "translate(16px,496px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Large Thin"
              >
                <div
                  className="iot--card--title--text"
                >
                  Large Thin
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "576px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Large"
            role="presentation"
            style={
              Object {
                "--card-default-height": "624px",
                "MozTransform": "translate(332px,496px)",
                "OTransform": "translate(332px,496px)",
                "WebkitTransform": "translate(332px,496px)",
                "height": "624px",
                "msTransform": "translate(332px,496px)",
                "position": "absolute",
                "transform": "translate(332px,496px)",
                "width": "616px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Large"
              >
                <div
                  className="iot--card--title--text"
                >
                  Large
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "576px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            data-testid="Card"
            id="Large Wide"
            role="presentation"
            style={
              Object {
                "--card-default-height": "624px",
                "MozTransform": "translate(16px,1136px)",
                "OTransform": "translate(16px,1136px)",
                "WebkitTransform": "translate(16px,1136px)",
                "height": "624px",
                "msTransform": "translate(16px,1136px)",
                "position": "absolute",
                "transform": "translate(16px,1136px)",
                "width": "1248px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Large Wide"
              >
                <div
                  className="iot--card--title--text"
                >
                  Large Wide
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "576px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Dashboard Grid dashboard, custom layout 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Passes a custom layout to the dashboard grid. Only the lg and md breakpoint have a custom layout defined. Resize the screen to see the cards reposition and resize themselves at different layouts.
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <div
          className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
          style={
            Object {
              "height": "656px",
            }
          }
        >
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            content="My Facility Metrics"
            data-testid="Card"
            id="facility"
            role="presentation"
            style={
              Object {
                "--card-default-height": "304px",
                "MozTransform": "translate(332px,336px)",
                "OTransform": "translate(332px,336px)",
                "WebkitTransform": "translate(332px,336px)",
                "height": "304px",
                "msTransform": "translate(332px,336px)",
                "position": "absolute",
                "transform": "translate(332px,336px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Facility Metrics"
              >
                <div
                  className="iot--card--title--text"
                >
                  Facility Metrics
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "256px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            content="My Humidity Values"
            data-testid="Card"
            id="humidity"
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(16px,16px)",
                "OTransform": "translate(16px,16px)",
                "WebkitTransform": "translate(16px,16px)",
                "height": "144px",
                "msTransform": "translate(16px,16px)",
                "position": "absolute",
                "transform": "translate(16px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Humidity"
              >
                <div
                  className="iot--card--title--text"
                >
                  Humidity
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            content="My utilization chart"
            data-testid="Card"
            id="utilization"
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(253px,176px)",
                "OTransform": "translate(253px,176px)",
                "WebkitTransform": "translate(253px,176px)",
                "height": "144px",
                "msTransform": "translate(253px,176px)",
                "position": "absolute",
                "transform": "translate(253px,176px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Utilization"
              >
                <div
                  className="iot--card--title--text"
                >
                  Utilization
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Dashboard Grid dashboard, default layouts 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Resize your window to see the callback handlers get triggered in the Actions tab.
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <div
          className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
          style={
            Object {
              "height": "336px",
            }
          }
        >
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            content="My Facility Metrics"
            data-testid="Card"
            id="facility"
            role="presentation"
            style={
              Object {
                "--card-default-height": "304px",
                "MozTransform": "translate(16px,16px)",
                "OTransform": "translate(16px,16px)",
                "WebkitTransform": "translate(16px,16px)",
                "height": "304px",
                "msTransform": "translate(16px,16px)",
                "position": "absolute",
                "transform": "translate(16px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Facility Metrics"
              >
                <div
                  className="iot--card--title--text"
                >
                  Facility Metrics
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "256px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            content="My Humidity Values"
            data-testid="Card"
            id="humidity"
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(332px,16px)",
                "OTransform": "translate(332px,16px)",
                "WebkitTransform": "translate(332px,16px)",
                "height": "144px",
                "msTransform": "translate(332px,16px)",
                "position": "absolute",
                "transform": "translate(332px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Humidity"
              >
                <div
                  className="iot--card--title--text"
                >
                  Humidity
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item cssTransforms iot--card--wrapper"
            content="My utilization chart"
            data-testid="Card"
            id="utilization"
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(648px,16px)",
                "OTransform": "translate(648px,16px)",
                "WebkitTransform": "translate(648px,16px)",
                "height": "144px",
                "msTransform": "translate(648px,16px)",
                "position": "absolute",
                "transform": "translate(648px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Utilization"
              >
                <div
                  className="iot--card--title--text"
                >
                  Utilization
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/Dashboard Grid dashboard, is Edtiable 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    You can drag and drop the cards around. Watch the handler get triggered on the Actions tab.
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <div
          className="react-grid-layout DashboardGrid__StyledGridLayout-vxs00g-0 hTrCDO"
          style={
            Object {
              "height": "336px",
            }
          }
        >
          <div
            className="iot--card react-grid-item react-draggable cssTransforms iot--card--wrapper"
            content="My Facility Metrics"
            data-testid="Card"
            id="facility"
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="presentation"
            style={
              Object {
                "--card-default-height": "304px",
                "MozTransform": "translate(16px,16px)",
                "OTransform": "translate(16px,16px)",
                "WebkitTransform": "translate(16px,16px)",
                "height": "304px",
                "msTransform": "translate(16px,16px)",
                "position": "absolute",
                "touchAction": "none",
                "transform": "translate(16px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Facility Metrics"
              >
                <div
                  className="iot--card--title--text"
                >
                  Facility Metrics
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "256px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item react-draggable cssTransforms iot--card--wrapper"
            content="My Humidity Values"
            data-testid="Card"
            id="humidity"
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(332px,16px)",
                "OTransform": "translate(332px,16px)",
                "WebkitTransform": "translate(332px,16px)",
                "height": "144px",
                "msTransform": "translate(332px,16px)",
                "position": "absolute",
                "touchAction": "none",
                "transform": "translate(332px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Humidity"
              >
                <div
                  className="iot--card--title--text"
                >
                  Humidity
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
          <div
            className="iot--card react-grid-item react-draggable cssTransforms iot--card--wrapper"
            content="My utilization chart"
            data-testid="Card"
            id="utilization"
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="presentation"
            style={
              Object {
                "--card-default-height": "144px",
                "MozTransform": "translate(648px,16px)",
                "OTransform": "translate(648px,16px)",
                "WebkitTransform": "translate(648px,16px)",
                "height": "144px",
                "msTransform": "translate(648px,16px)",
                "position": "absolute",
                "touchAction": "none",
                "transform": "translate(648px,16px)",
                "width": "300px",
              }
            }
            type="VALUE"
          >
            <div
              className="iot--card--header"
            >
              <span
                className="iot--card--title"
                title="Utilization"
              >
                <div
                  className="iot--card--title--text"
                >
                  Utilization
                </div>
              </span>
              <div
                className="iot--card--toolbar"
              />
            </div>
            <div
              className="iot--card--content"
              style={
                Object {
                  "--card-content-height": "96px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
